--- a/index.html
+++ b/index.html
@@ -118,9 +118,11 @@
   </section>
   
 </div>
+<section class="section5">
 <div class="section-button text-align">
    <button style="background-color:red"> Read More </button>
       <p> Image form <span style="color:green"> Freepik </span> </p>
+      </div>
   </section>
   <section class="section6">
    <div class="contanier">
