fixes for the form group

--- a/index.html
+++ b/index.html
@@ -218,13 +218,21 @@
 <div class="registration-form">
 <h3> Drop a line </h3>
 <form action="#" method="post">
-   <p> Email</p>
-   <input type="text" name="Email" placeholder="Enter a Valid email Address">
-   <p> Name </p>
-   <input type="text" name="Name" placeholder="Enter your Name">
-   <p> Address </p>
-   <input type="text" name="Address" placeholder="Enter your Address">
+<div class="form-row">
+   <div class="email-wrapper">
+      <label class="form-label">EMAIL</label>
+      <input type="text" class="input-field-style" placeholder="Enter email address" />
+   </div>
+   <div class="name-wrapper">
+         <label class="form-label">NAME</label>
+         <input type="text" class="input-field-style" placeholder="Enter name here" />
+   </div>
+</div>
 
+<div class="form-row">
+   <label class="form-label">ADDRESS</label>
+   <input type="text" class="input-field-style" placeholder="Enter your address" />
+</div>
 </form>
 
 </div>
