--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@
 
    </section>
    <section class="secction12">
-      <div class="footer">
-         <p class="text-align">Sample text. Click to select the Text Element.</p>
+      <div class="footer text-aligngi">
+         <p>Sample text. Click to select the Text Element.</p>
          <div class="link">
             <p> <a href="">Website Templates </a> created with <a href=""> Website Builder Software.</p></a>
          </div>
