--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 
    </section>
    <section class="secction12">
-      <div class="footer text-aligngi">
+      <div class="footer text-align">
          <p>Sample text. Click to select the Text Element.</p>
          <div class="link">
             <p> <a href="">Website Templates </a> created with <a href=""> Website Builder Software.</p></a>
