--- a/index.html
+++ b/index.html
@@ -145,8 +145,7 @@
             <h1> Our School Anniversary </h1>
             <p> Simple is a company specializing in providing financial, marketing and analytical services to other
                companies and private entrepreneurs to help them improve their businesses.</p>
-            <p> Image form <span style="color:red"> Freepik </span> </p>
-
+            
             <div class="section-button">
                <button> Read More </button>
             </div>
@@ -180,32 +179,46 @@
    </section>
 
    <section class="section8">
-      <div class="contanier8">
+      <div class="container8">
          <div class="layout1 ">
-            <div class="card-desgin">
+            <div class="card-desgin text-align">
                <h1>Training is everything</h1>
                <p>The paradox of education is precisely this - that as one begins to become conscious one begins to
                   examine the society in which he is being educated.</p>
             </div>
          </div>
 
+<div class="layoutcol">
          <div class="imagescard">
+<!--          
+            <img src="https://images03.nicepagecdn.com/c461c07a441a5d220e8feb1a/d8ce469044b958508f4bdbab/blueschoolbackpackwithessentialsupplies_232148207678.jpg">
+            <img src="https://images03.nicepagecdn.com/c461c07a441a5d220e8feb1a/9e4ce16148dd5cbeb1065410/89f80abe-6acd-d8dc-a341-3e571206975b.jpg"> -->
+<div class="img1">
 
-            <img class="img1"
-               src="https://images03.nicepagecdn.com/c461c07a441a5d220e8feb1a/d8ce469044b958508f4bdbab/blueschoolbackpackwithessentialsupplies_232148207678.jpg">
-            <img class="img2"
-               src="https://images03.nicepagecdn.com/c461c07a441a5d220e8feb1a/9e4ce16148dd5cbeb1065410/89f80abe-6acd-d8dc-a341-3e571206975b.jpg">
+</div>
+<div class="img2">
+
+</div>
+</div> 
+<div class="imagescard">
+   <div class="img3">
+ <h1 class="text-align"> Education is the key to success</h1>
+   </div>
+   <div class="img4">
+
+   </div>
+   </div> 
+</div>
+ 
 
 
-
-
-         </div>
+         
    </section>
    <section class="section9">
-      <div class="contanier9">
-         <div class="layoutcard">
-            <img
-               src="https://images01.nicepagecdn.com/a1389d7bc73adea1e1c1fb7e/ce44e13b52ee5eec9d8826e4/2050938_medium2000.jpg">
+      <div class="container9">
+         <div class="img5">
+            <!-- <img
+               src="https://images01.nicepagecdn.com/a1389d7bc73adea1e1c1fb7e/ce44e13b52ee5eec9d8826e4/2050938_medium2000.jpg"> -->
          </div>
          <div class="layoutcard2">
             <h3>Morbi eros lorem, imperdiet</h3>
@@ -219,7 +232,7 @@
       </div>
    </section>
    <section class="section10">
-      <div class="contanier2">
+      <div class="container10">
          <div class="section-image">
             <img
                src="https://images01.nicepagecdn.com/a1389d7bc73adea1e1c1fb7e/7f9710e1ece658cb989a1f77/children-colored-caps-playing_23-2147807858.jpeg">
