chnages website desgin

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
    </section>
    <section class="section2">
-      <div class="contanier">
+      <div class="container2">
          <div class="section-text">
             <h4> Little More About us</h4>
             <h1> Your Kids Is Our Furture </h1>
@@ -50,7 +50,7 @@
 
    </section>
    <section class="section3">
-      <div class="contanier2">
+      <div class="container3">
          <div class="section-image">
             <img
                src="https://images01.nicepagecdn.com/a1389d7bc73adea1e1c1fb7e/dd62a3120519558785ac677f/close-up-little-girl-having-fun-birthday-party_1098-1319.jpeg">
@@ -76,7 +76,7 @@
    </section>
    <section class="section4">
       <img src="https://images03.nicepagecdn.com/c461c07a441a5d220e8feb1a/68d3399d24275941b6d21aef/fggg.jpg">
-      <div class="contanier-card">
+      <div class="container-card">
          <div class="card1">
             <div class="dot">
                <img src="/images/lightbulb (1).png">
@@ -139,7 +139,7 @@
       </div>
    </section>
    <section class="section6">
-      <div class="contanier">
+      <div class="container6">
          <div class="section-text">
             <h4>Our School life</h4>
             <h1> Our School Anniversary </h1>
@@ -160,7 +160,7 @@
 
    </section>
    <section class="section7">
-      <div class="contanier7">
+      <div class="container7">
          <div class="heading text-color">
             <h3> Little More About Us</h3>
             <h1 class="font-size"> Your Kids is Our Future</h1>
