styling center align

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       </div>
    </section>
    <section class="section4">
-      <img src="https://images03.nicepagecdn.com/c461c07a441a5d220e8feb1a/68d3399d24275941b6d21aef/fggg.jpg">
+      <img class="imagechild" src="https://images03.nicepagecdn.com/c461c07a441a5d220e8feb1a/68d3399d24275941b6d21aef/fggg.jpg">
       <div class="container-card">
          <div class="card1">
             <div class="dot">
