--- a/new-index.html
+++ b/new-index.html
@@ -19,7 +19,7 @@
            </div>
         </div>
      </section>
-      <section class="section2"> 
+       <section class="section2"> 
         <div class="container2">
            <div class="section-text">
               <h4> Little More About us</h4>
@@ -40,9 +40,9 @@
         <div class="section-image">
            <img
               src="https://images01.nicepagecdn.com/a1389d7bc73adea1e1c1fb7e/f2bef76129f055bebfd4c888/happy-kids-elementary-school.jpg">
-        </div>
+        </div> 
   
-     </section> 
+     </section>  
       <section class="section3">
         <div class="container3">
            <div class="section-image">
@@ -67,9 +67,9 @@
   
   
         </div>
-     </section>
-     <section class="section4">
-        <img src="https://images03.nicepagecdn.com/c461c07a441a5d220e8feb1a/68d3399d24275941b6d21aef/fggg.jpg">
+     </section> 
+      <section class="section4">
+        <img class="imagechild" src="https://images03.nicepagecdn.com/c461c07a441a5d220e8feb1a/68d3399d24275941b6d21aef/fggg.jpg">
         <div class="container-card">
            <div class="card1">
               <div class="dot">
@@ -123,12 +123,12 @@
            </div>
   
         </div>
-     </section>
+     </section> -->
      <section class="section5">
         <div class="section-button text-align">
            <button style="background-color:red"> Read More </button>
         </div>
-  </section>
+  </section> 
   <section class="section6">
     <div class="container6">
        <div class="section-text">
@@ -149,7 +149,7 @@
           src="https://images01.nicepagecdn.com/a1389d7bc73adea1e1c1fb7e/de5c3105166f5da39b1aa21c/children-playing-grass.jpg">
     </div>
 
- </section> 
+ </section>
  <section class="section7">
     <div class="container7">
        <div class="heading text-color">
@@ -169,21 +169,21 @@
     </div>
  </section>
  <section class="section8">
-    <div class="container8">
-       <div class="layout1 ">
-          <div class="card-desgin text-align">
-             <h1>Training is everything</h1>
-             <p>The paradox of education is precisely this - that as one begins to become conscious one begins to
-                examine the society in which he is being educated.</p>
-          </div>
-       </div>
+   <div class="container8">
+      <div class="layout1 ">
+         <div class="card-desgin text-align">
+            <h1>Training is everything</h1>
+            <p>The paradox of education is precisely this - that as one begins to become conscious one begins to
+               examine the society in which he is being educated.</p>
+         </div>
+      </div>
 
 <div class="layoutcol">
-       <div class="imagescard">
+      <div class="imagescard">
 <!--          
-          <img src="https://images03.nicepagecdn.com/c461c07a441a5d220e8feb1a/d8ce469044b958508f4bdbab/blueschoolbackpackwithessentialsupplies_232148207678.jpg">
-          <img src="https://images03.nicepagecdn.com/c461c07a441a5d220e8feb1a/9e4ce16148dd5cbeb1065410/89f80abe-6acd-d8dc-a341-3e571206975b.jpg"> -->
- <div class="img1">
+         <img src="https://images03.nicepagecdn.com/c461c07a441a5d220e8feb1a/d8ce469044b958508f4bdbab/blueschoolbackpackwithessentialsupplies_232148207678.jpg">
+         <img src="https://images03.nicepagecdn.com/c461c07a441a5d220e8feb1a/9e4ce16148dd5cbeb1065410/89f80abe-6acd-d8dc-a341-3e571206975b.jpg"> -->
+<div class="img1">
 
 </div>
 <div class="img2">
@@ -191,21 +191,25 @@
 </div>
 </div> 
 <div class="imagescard">
- <div class="img3">
+<div class="img3">
 <h1 class="text-align"> Education is the key to success</h1>
- </div>
- <div class="img4">
-
- </div>
- </div> 
 </div>
- 
- </section>
- <section class="section9">
+<div class="img4">
+
+</div>
+</div> 
+</div>
+
+
+
+      
+</section>
+    
+  <section class="section9">
    <div class="container9">
       <div class="img5">
-         <!-- <img
-            src="https://images01.nicepagecdn.com/a1389d7bc73adea1e1c1fb7e/ce44e13b52ee5eec9d8826e4/2050938_medium2000.jpg"> -->
+          <img>
+            <!-- src="https://images01.nicepagecdn.com/a1389d7bc73adea1e1c1fb7e/ce44e13b52ee5eec9d8826e4/2050938_medium2000.jpg"> -->
       </div>
       <div class="layoutcard2">
          <h3>Morbi eros lorem, imperdiet</h3>
@@ -217,7 +221,7 @@
          </div>
       </div>
    </div>
-   </section>
+   </section> 
    <section class="section10">
       <div class="container10">
          <div class="section-image">
@@ -242,10 +246,10 @@
 
 
       </div>
-   </section>
-   <section class="section11">
+   </section> 
+   <section class="section11"> 
       <!-- Center container -->
-      <div class="center-container">
+       <div class="center-container">
       <div class="registration-form">
          <h3> Drop a line </h3>
          <form action="#" method="post">
